--- a/links/index.html
+++ b/links/index.html
@@ -19,10 +19,9 @@
     <title>My links</title>
   </head>
   <body class="flex items-center justify-center bg-zinc-100 dark:bg-zinc-800">
-    <div class="container p-6">
-        <main>
+    <div class="">
             <!-- Navbar -->
-            <nav class=" dark:text-zinc-100 shadow-md  z-50 bg-white/90 dark:bg-zinc-700/80 dark:border-zinc-600 border backdrop-blur-md rounded-md p-4 md:p-6 flex items-center justify-between">
+            <nav class=" dark:text-zinc-100 shadow-md  z-50 bg-white/90 dark:bg-zinc-700/80 dark:border-zinc-600 border backdrop-blur-md rounded-md  md:p-6 flex items-center justify-between">
                 <div><a href="#" class="font-mono font-extrabold text-2xl">Linkz</a></div>
                 
                     <div class="space-x-4 flex items-center ">
@@ -36,16 +35,17 @@
             </nav>
 
             <!-- content -->
-            <div class="mt-20  max-w-xl mx-auto  dark:border-zinc-600 border backdrop-blur-md rounded-md p-6">
+            <div class="mt-20  max-w-xl mx-auto   backdrop-blur-md rounded-md py-6">
                 
                 <div class="flex flex-col justify center items-center text-center space-y-4">
                     <div class="w-24 ring-4 ring-yellow-400 rounded-full">
                       <img src="https://placeimg.com/192/192/people" class="object-center object-cover w-full h-full rounded-full "/>
                     </div>
                     <h1 class=" text-black text-lg dark:text-zinc-100 font-extrabold">@BernardYamoah</h1>
+                    <p class="text-sm text-zinc-400">I am a self taught frontend developer</p>
                   </div>
 
-                  <div class="dark:text-zinc-100 max-w-md mx-auto mt-20 space-y-10">
+                  <div class="text-zinc-100 max-w-md mx-auto mt-20 space-y-10">
 <!-- Link 1 -->
                     <a href="https://www.linkedin.com/in/bernard-yamoah-971386132/" class="flex justify-between items-center w-full bg-blue-700 rounded-md p-4 shadow-md hover:shadow-lg">
                         <!-- Icon -->
