--- a/links/index.html
+++ b/links/index.html
@@ -21,8 +21,8 @@
   <body class="flex items-center justify-center bg-zinc-100 dark:bg-zinc-800">
     <div class="">
             <!-- Navbar -->
-            <nav class=" dark:text-zinc-100 shadow-md  z-50 bg-white/90 dark:bg-zinc-700/80 dark:border-zinc-600 border backdrop-blur-md rounded-md  md:p-6 flex items-center justify-between">
-                <div><a href="#" class="font-mono font-extrabold text-2xl">Linkz</a></div>
+            <nav class=" w-full p-4 dark:text-zinc-100 shadow-md  z-50 bg-white/90 dark:bg-zinc-700/80 dark:border-zinc-600 border backdrop-blur-md rounded-md  md:p-6 flex items-center justify-between">
+                <div><a href="#" class="font-mono font-extrabold text-lg">Linkz</a></div>
                 
                     <div class="space-x-4 flex items-center ">
                         <button id="theme-toggle" type="button" class="text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5">
