--- a/links/index.html
+++ b/links/index.html
@@ -19,7 +19,7 @@
     <title>My links</title>
   </head>
   <body class="flex items-center justify-center bg-zinc-100 dark:bg-zinc-800">
-    <div class="">
+    <div class="w-full">
             <!-- Navbar -->
             <nav class=" w-full p-4 dark:text-zinc-100 shadow-md  z-50 bg-white/90 dark:bg-zinc-700/80 dark:border-zinc-600 border backdrop-blur-md rounded-md  md:p-6 flex items-center justify-between">
                 <div><a href="#" class="font-mono font-extrabold text-lg">Linkz</a></div>
@@ -35,7 +35,7 @@
             </nav>
 
             <!-- content -->
-            <div class="mt-20  max-w-xl mx-auto   backdrop-blur-md rounded-md py-6">
+            <div class="mt-28  max-w-xl mx-auto   backdrop-blur-md rounded-md py-6">
                 
                 <div class="flex flex-col justify center items-center text-center space-y-4">
                     <div class="w-24 ring-4 ring-yellow-400 rounded-full">
