--- a/links/index.html
+++ b/links/index.html
@@ -16,6 +16,8 @@
             document.documentElement.classList.remove('dark')
         }
     </script>
+    <script async src="https://cdn.splitbee.io/sb.js"></script>
+
     <title>My links</title>
   </head>
   <body class="flex items-center justify-center bg-zinc-100 dark:bg-zinc-800">
