--- a/links/index.html
+++ b/links/index.html
@@ -49,7 +49,7 @@
                     <p class="text-sm text-zinc-400">I am a self taught frontend developer</p>
                   </div>
 
-                  <div class="text-zinc-100 max-w-md mx-auto mt-20 space-y-10">
+                  <div class="text-zinc-100 max-w-md mx-auto mt-20 space-y-5">
                         <!-- Link 1 -->
                     <a href="https://www.linkedin.com/in/bernard-yamoah-971386132/" class="flex justify-between items-center w-full bg-blue-700 rounded-md p-4 shadow-md hover:shadow-lg">
                         <!-- Icon -->
@@ -116,7 +116,7 @@
     </div>
      <script>
         var themeToggleDarkIcon = document.getElementById('theme-toggle-dark-icon');
-var themeToggleLightIcon = document.getElementById('theme-toggle-light-icon');
+        var themeToggleLightIcon = document.getElementById('theme-toggle-light-icon');
 
 // Change the icons inside the button based on previous settings
 if (localStorage.getItem('color-theme') === 'dark' || (!('color-theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
@@ -157,5 +157,6 @@ themeToggleBtn.addEventListener('click', function() {
 });
      </script>
      <script src="./app.js"></script>
+     <script src="https://unpkg.com/flowbite@1.5.5/dist/flowbite.js"></script>
   </body>
 </html>
