--- a/links/index.html
+++ b/links/index.html
@@ -7,11 +7,11 @@
       href="./output.css"
       rel="stylesheet"
     />
-    <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/alertify.min.js"></script>
+    <!-- <script src="iziToast.min.js" type="text/javascript"></script> -->
 
 
-
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<link rel="stylesheet" href="./iziToast.min.css">
+    <!-- <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script> -->
     <script src="https://kit.fontawesome.com/a04dfe1eb8.js" crossorigin="anonymous"></script>
     <script>
         // On page load or when changing themes, best to add inline in `head` to avoid FOUC
@@ -97,7 +97,9 @@
             </div>
         </main>
     </div>
+    <script src="./iziToast.min.js" type="text/javascript"></script> 
      <script>
+    
         var themeToggleDarkIcon = document.getElementById('theme-toggle-dark-icon');
         var themeToggleLightIcon = document.getElementById('theme-toggle-light-icon');
 
