--- a/links/index.html
+++ b/links/index.html
@@ -43,14 +43,14 @@
             </nav>
 
             <!-- content -->
-            <div class="mt-5   max-w-xl mx-auto   backdrop-blur-sm  rounded-md py-6 px-4">
+            <div class="mt-5  max-w-xl mx-auto  py-6 px-4">
                 
                 <div class="flex flex-col justify center items-center text-center space-y-4">
                     <div class="w-24 ring-4 transition-all duration-500 hover:ring-yellow-400 rounded-full">
                       <img src="https://placeimg.com/192/192/people" class="object-center object-cover w-full h-full rounded-full " alt="My picture"/>
                     </div>
                     <h1 class=" text-black text-lg dark:text-zinc-100 font-extrabold">@BernardYamoah</h1>
-                    <p class="text-sm text-zinc-600 dark:text-gray-200">I am a self taught frontend developer</p>
+                    <p class="text-base text-zinc-600 dark:text-gray-200">I am a self taught frontend developer</p>
                   </div>
 
                   <div class="content dark:text-zinc-100 max-w-xl mx-auto mt-12 space-y-4">
