--- a/links/index.html
+++ b/links/index.html
@@ -30,7 +30,7 @@
     <div class="w-full  md:pt-8 md:pb-10">
             <!-- Navbar -->
             <nav class=" w-full lg:max-w-2xl sm:max-w-md md:max-w-lg px-4 py-2 dark:text-zinc-100 shadow-md  z-50 bg-white/90 dark:bg-zinc-700/80 dark:border-zinc-600 border backdrop-blur-md rounded-md   flex items-center justify-between md:px-6  mx-auto">
-                <div><a href="#" class="font-mono font-extrabold text-lg">Linkz</a></div>
+                <div><a href="#" class=" font-extrabold text-lg">Linkz</a></div>
                 
                     <div class="space-x-4 flex items-center ">
                         <button id="theme-toggle" type="button" class="text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5">
