--- a/links/index.html
+++ b/links/index.html
@@ -12,7 +12,7 @@
 
 
 <link rel="stylesheet" href="./iziToast.min.css">
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <!-- <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script> -->
     <script src="https://kit.fontawesome.com/a04dfe1eb8.js" crossorigin="anonymous"></script>
     <script>
         // On page load or when changing themes, best to add inline in `head` to avoid FOUC
