--- a/attendees/index.html
+++ b/attendees/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="This a clone version of linktree">
+    <meta name="description" content="Attendees">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="./output.css"
