--- a/attendees/index.html
+++ b/attendees/index.html
@@ -37,7 +37,7 @@
                     <!-- Phone Number -->
                     <p class="  mt-4 text-gray-500 capitalize dark:text-gray-300 text-sm">Contact Number</p>
 <div class="flex font-mono w-full mt-2  ">
-    <a href="#" tel="+233209158649"  class="w-full border flex space-x-2 items-center px-4 py-2 justify-center text-gray-700 transition-colors duration-300 transform rounded-md dark:text-gray-200 hover:bg-blue-500 text-center hover:text-white">
+    <a href="tel:+233209158649"   class="w-full border flex space-x-2 items-center px-4 py-2 justify-center text-gray-700 transition-colors duration-300 transform rounded-md dark:text-gray-200 hover:bg-blue-500 text-center hover:text-white">
         <svg class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
             <path d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.773a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z" />
         </svg>
