--- a/attendees/index.html
+++ b/attendees/index.html
@@ -16,7 +16,7 @@
     
     
 
-    <title>My links</title>
+    <title>Attendees</title>
   </head>
   <body class="flex  bg-zinc-100 dark:bg-[url('./Raindrop-3.3s-1084px.svg')] bg-[url('./Raindrop-100s-1084px.svg')] ">
     <section class=" w-full">
