--- a/Calendar Events/index.html
+++ b/Calendar Events/index.html
@@ -43,9 +43,11 @@
             </nav>
 
             <!-- content -->
-            <main class="mt-5  flex items-center flex-col mx-auto  py-6 px-4">
+            <main class="mt-5  flex items-center flex-col mx-auto  py-6 px-1">
                 <div class="header">
-                    <h1 class="calendar-heading ">Events</h1>
+                    <button class="navigation" onclick="previousMonth()">&lt;</button>
+                    <h1 id="month"></h1>
+                    <button class="navigation" onclick="nextMonth()">&gt;</button>
                 </div>
 
                 <div class="calendar" id="calendar">
