--- a/Calendar Events/index.html
+++ b/Calendar Events/index.html
@@ -26,14 +26,14 @@
 
     <title>My links</title>
   </head>
-  <body class="bg-purple-700">
+  <body class="bg-white dark:bg-purple-700">
 
             <!-- Navbar -->
-            <nav class=" w-full lg:max-w-2xl sm:max-w-md md:max-w-lg px-4 py-2 dark:text-zinc-100 shadow-md  z-50 bg-white/90 dark:bg-zinc-700/80 dark:border-zinc-600 border backdrop-blur-md lg:rounded-md   flex items-center justify-between md:px-6  mx-auto md:mt-5">
+            <nav class=" w-full lg:max-w-2xl sm:max-w-md md:max-w-lg px-4 py-2 dark:text-zinc-100 shadow-md  z-50 bg-white/90 dark:bg-purple-700/80 dark:border-purple-600 border backdrop-blur-md lg:rounded-md   flex items-center justify-between md:px-6  mx-auto md:mt-5">
                 <div><a href="#" class=" font-extrabold text-lg">Events Calendar</a></div>
                 
                     <div class="space-x-4 flex items-center ">
-                        <button id="theme-toggle" type="button" class="text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5">
+                        <button id="theme-toggle" type="button" class="text-purple-500 dark:text-purple-200 hover:bg-purple-100 dark:hover:bg-purple-700 focus:outline-none focus:ring-4 focus:ring-purple-200 dark:focus:ring-purple-700 rounded-lg text-sm p-2.5">
                             <svg id="theme-toggle-dark-icon" class="hidden w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"></path></svg>
                             <svg id="theme-toggle-light-icon" class="hidden w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z" fill-rule="evenodd" clip-rule="evenodd"></path></svg>
                         </button>
@@ -43,7 +43,7 @@
             </nav>
 
             <!-- content -->
-            <main class="mt-5  flex items-center flex-col mx-auto  py-6 px-1">
+            <main class="mt-5  flex items-center flex-col mx-auto  py-6 px-2">
                 <div class="header">
                     <button class="navigation" onclick="previousMonth()">&lt;</button>
                     <h1 id="month"></h1>
